--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
     <body>
         <div id="nav"></div>
         <div id="sign_in">
-            <h2 id="logintag">Login</h2>
+            <h2>Login</h2>
 
             <form class="form" action="/login" method="post">
                 <div class="input-group">
