--- a/public/main.html
+++ b/public/main.html
@@ -131,7 +131,7 @@
         
         <div id="drinks" class="container-fluid">
             <div class="text-center">
-                <p><img id="drinks_img" class = "menu_icon" src="/images/drinks3.png" /></p>
+                <p><img id="drinks_img" class = "menu_icon" src="/images/drinks.png" /></p>
             </div>
             <div class="row">
                 <div class="col-sm-4 col-xs-12">
@@ -154,7 +154,7 @@
         
         <div id="meals" class="container-fluid">
             <div class="text-center">
-                <p><img id="meal_img" class = "menu_icon" src="/images/meal.png" /></p>
+                <p><img id="meal_img" class = "menu_icon" src="/images/hamburger.png" /></p>
             </div>
             <div class="row">
                 <div class="col-sm-4 col-xs-12">
