--- a/public/admin.html
+++ b/public/admin.html
@@ -57,6 +57,7 @@
 		<div id="admin-div" class="container-fluid">
 		<div id="appetizers" class="container-fluid">
             <div class="text-center">
+				<p><img id="appetizer_img" class = "menu_icon" src="/images/appetizer.png" /></p>
                 <h2>Appetizers</h2>
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
