--- a/public/main.html
+++ b/public/main.html
@@ -355,7 +355,7 @@
 						<div class="row">
 							
 							<!-- Beginning of character -->
-							<div class="col-sm-12 col-xs-12">
+							<div class="col-m-12 col-sm-12 col-xs-12">
 								<div class="panel panel-default text-center">
 									<div class="panel-body">
 										<div class="imgs_about_us">
