--- a/public/navbar.html
+++ b/public/navbar.html
@@ -35,8 +35,8 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li id="login"><a href="/signin" class="reg"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                        <li id="logout"><a href="/logout" class="reg"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                        <li id="login"><a href="/signin" class="reg">Login</a></li>
+                        <li id="logout"><a href="/logout" class="reg">Logout</a></li>
                     </ul>
                 </div>
             </div>
