--- a/public/main.html
+++ b/public/main.html
@@ -164,7 +164,7 @@
                         </div>
                     </div>      
                 </div>     
-                <!--End of character -->
+                <!---End of character -->
 
                 <!-- Beginning of character -->
                 <div class="col-sm-4 col-xs-12">
