Fix some merge conflicts
Signed-off-by: a-mori <almoriex@gmail.com>

--- a/public/admin.html
+++ b/public/admin.html
@@ -46,6 +46,8 @@
             </div>
         </nav>
         
+        <!-- ******** Cart not needed in admin ******** -->
+        
 		<div id="admin-div" class="container-fluid">
              <div id="meals" class="container-fluid">
                 <div class="text-center">
