changed image ratios, edited login, main.css

--- a/public/main.html
+++ b/public/main.html
@@ -25,8 +25,8 @@
         <nav id="navigation" class="navbar navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <div id="logo" class="navbar-brand"></div>
-                    <div id="title" class="navbar-brand">Rebel Hangar</div>
+                    <a href="/public/main.html" id="logo" class="navbar-brand"></a>
+                    <a href="/public/main.html" id="title" class="navbar-brand">Rebel Hangar</a>
                     
                     <button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
