coded profile page

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -41,5 +41,7 @@
                 </div>
             </div>
         </nav>
+        
+        <script src="/scripts/navbarbundle.js"></script>
     </body>
 </html>
