--- a/public/profile.html
+++ b/public/profile.html
@@ -18,7 +18,7 @@
     
     <body data-offset="50">
         <div id="nav"></div>
-        <form class="form form-group" id="cEmail" action="/changeEmail" type="post">
+        <form class="form form-group" id="cEmail" action="/changeEmail" method="post">
             <div class="input-group">
                 <input type="email" placeholder="EMAIL" name="email" class="form-control inputs">
                 <div class="input-group-btn">
@@ -27,7 +27,7 @@
             </div>
         </form>
 
-        <form class="form form-group" action="/changePassword" type="post">
+        <form class="form form-group" action="/changePassword" method="post">
             <div class="input-group">
                 <input type="password" placeholder="PASSWORD" name="password" class="form-control inputs">
                 <div class="input-group-btn">
