--- a/public/orders.html
+++ b/public/orders.html
@@ -46,6 +46,8 @@
 			</div>
 		</div>
 		
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/scripts/ordersbundle.js"></script>
     </body>
 	
 </html>
