--- a/public/orders.html
+++ b/public/orders.html
@@ -28,15 +28,15 @@
                         below is an example.-->                  
                         <!--<h4>2 Cheese Pizza $10.50</h4>-->
                     </div>
-					<div id="fb-total">
-					<p>Food & Drink Total:</p>
+					<div>
+					<p id="fb-total" >Food & Drink Total:</p>
 						
 					</div>
-					<div id="taxes">
-					<p>Taxes:</p>
+					<div>
+					<p id="taxes">Taxes:</p>
 					</div>
-					<div id="order-total">
-					<p>Order Total:</p>
+					<div>
+					<p id="order-total">Order Total:</p>
 					</div>
                 </div>
 
