fix img size, arrange in folders, tested on main

--- a/public/main.html
+++ b/public/main.html
@@ -210,7 +210,7 @@
     
         <div id="appetizers_holder" class="container-fluid">
             <div class="text-center">
-                <p><img id="appetizer_img" class = "menu_icon" src="/images/appetizer/appetizer.png" /></p>
+                <p><img id="appetizer_img" class = "menu_icon" src="/images/appetizer.png" /></p>
                 <h2 text-align="center">Appetizers</h2>
             </div>
             
