--- a/public/admin.html
+++ b/public/admin.html
@@ -45,7 +45,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a id="logout_link" href="/logout" class="reg">Logout</a></li>
+                        <li><a href="/logout" class="reg">Logout</a></li>
                     </ul>
                 </div>
             </div>
