kitchen populates with pending items [#144655263 #145396107]

--- a/public/kitchen.html
+++ b/public/kitchen.html
@@ -16,6 +16,8 @@
     <body>
         <button class="btn" id="logout">LOGOUT</button>
         
+        <div id="order-status"></div>
+        
         <div id="container">        
             <label>Orders</label>
         </div>
