database updates properly now when orders are complete

--- a/public/orders.html
+++ b/public/orders.html
@@ -106,7 +106,7 @@
                 </div>
 				<div id="order-cust-info" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 					<button type="button" id="cancel-but" class="btn btn-danger">Cancel</button>
-					<button type="button" id="checkout-but" class="btn btn-success" data-toggle="modal" data-target="#checkModal">Place Order</button>
+                    <button type="button" id="checkout-but" class="btn btn-success"> <!--data-toggle="modal" data-target="#checkModal"-->Place Order</button>
 					 <div class="modal fade" id="checkModal" role="dialog">
     <div class="modal-dialog">
     
