resetting git pull

--- a/public/orders.html
+++ b/public/orders.html
@@ -56,12 +56,12 @@
 						<ul>
 							<li>
 								<label>
-								<input type="radio" name="eat-in" id="eat-in" value="Eat-In">Eat In
+								<input type="radio" name="service-op" id="eat-in" value="Eat-In">Eat In
 								</label>
 							</li>
 							<li>
 								<label>
-								<input type="radio" name="to-go" id="to-go" value="To-Go">To Go
+								<input type="radio" name="service-op" id="to-go" value="To-Go">To Go
 								</label>
 							</li>
 						</ul>
@@ -72,17 +72,17 @@
 						<ul>
 							<li>
 								<label>
-								<input type="radio" name="im-credit" id="im-credit" value="im-credit">Imperial Credit Coin
+								<input type="radio" name="payment" id="im-credit" value="im-credit">Imperial Credit Coin
 								</label>
 							</li>
 							<li>
 								<label>
-								<input type="radio" name="gcs" id="gcs" value="gcs">Galactic Credit Chips
+								<input type="radio" name="payment" id="gcs" value="gcs">Galactic Credit Chips
 								</label>
 							</li>
 							<li>
 								<label>
-								<input type="radio" name="wupi" id="wupi" value="wupi">Wupiupi Coin
+								<input type="radio" name="payment" id="wupi" value="wupi">Wupiupi Coin
 								</label>
 							</li>
 						</ul>
@@ -106,7 +106,7 @@
                 </div>
 				<div id="order-cust-info" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 					<button type="button" id="cancel-but" class="btn btn-danger">Cancel</button>
-                    <button type="button" id="checkout-but" class="btn btn-success"> <!--data-toggle="modal" data-target="#checkModal"-->Place Order</button>
+					<button type="button" id="checkout-but" class="btn btn-success" data-toggle="modal" data-target="#checkModal">Place Order</button>
 					 <div class="modal fade" id="checkModal" role="dialog">
     <div class="modal-dialog">
     
