--- a/public/navbar.html
+++ b/public/navbar.html
@@ -2,14 +2,8 @@
 <html>
     <head>
         <link rel="icon" type="image/png" href="/images/Rebel-50.png"/>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/scripts/navbarbundle.js"></script>
         
         <link rel="stylesheet" href="/css/navigation.css"/>
@@ -35,7 +29,7 @@
                         <li><a id="appetizer_link" href="/public/main.html#appetizers">Appetizers</a></li>
 						<li><a id="drink_link" href="/public/main.html#drinks">Drinks</a></li>
                         <li><a id="dessert_link" href="/public/main.html#desserts">Desserts</a></li>
-						<li><a id="about_link" href="/public/about.html">Our Team</a></li>
+						<li><a id="about_link" href="/public/main.html#about">Our Team</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
