not kitchen stuff, but added item code field to create items in admin [#145481571] [#145565525] [#145396097] [#145396117] [#145565497] [#145565465] [#145565405] [#145485205]

--- a/public/admin.html
+++ b/public/admin.html
@@ -111,6 +111,8 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
+                            <label for="item-code">Item Code:</label>
+                            <input type="text" class="form-control" id="item-code" placeholder="Item Code (no spaces)">
                             <label for="item-name">Item Name:</label>
                             <input type="text" class="form-control" id="item-name" placeholder="Item Name">
                             <label for="item-cat">Item Categories:(Select one)</label>
