added a badge beside cart
Signed-off-by: Alex Mori <almoriex@gmail.com>

--- a/public/main.html
+++ b/public/main.html
@@ -51,7 +51,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a data-toggle="collapse" data-target="#cart" id="cart_link">
-                                <span class="glyphicon glyphicon-shopping-cart"></span>
+                                <span class="glyphicon glyphicon-shopping-cart"> <span class="badge" id="badge">5</span></span>
                             </a>
                         </li>
                         
