--- a/public/orders.html
+++ b/public/orders.html
@@ -15,7 +15,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/scripts/ordersbundle.js"></script>
+        <!-- <script src="/scripts/ordersbundle.js"></script> -->
+		 <script src="/js/orders.js"></script> 
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.1.min.js"></script>
     </head>
 
